fix reviews z-index

--- a/src/assets/styles/cmps/StayDetails/_StayReviews.scss
+++ b/src/assets/styles/cmps/StayDetails/_StayReviews.scss
@@ -89,7 +89,7 @@
 .reviews-modal-container {
   display: block;
   position: fixed;
-  z-index: 1;
+  z-index: 101;
   left: 0;
   top: 0;
   width: 100%;
