--- a/src/assets/styles/cmps/_StayPreview.scss
+++ b/src/assets/styles/cmps/_StayPreview.scss
@@ -132,6 +132,7 @@
 
 .image-gallery-icon {
   opacity: 0.3;
+  z-index: 1;
   transition: opacity 0.3s ease-in-out;
 }
 
